<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
     android:title="@string/dock_settings_title">

    <ListPreference android:key="keyboard_layout"
        android:title="@string/keyboard_language_title"
        android:summary="@string/keyboard_language_summary"
        android:entries="@array/keyboard_layout_array"
        android:entryValues="@array/keyboard_layout_array_values" />
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/touchpad_setting_title">
    <ListPreference android:key="touchpad_mode_selector"
        android:title="@string/touchpad_mode_selector"
        android:entries="@array/touchpad_mode_selector_entries"
        android:defaultValue="@string/touchpad_mode_value_android32"
        android:entryValues="@array/touchpad_mode_selector_values" />
    </PreferenceCategory>
</PreferenceScreen>
